--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,13 @@
 
   background: gray;
 }
+
+.page {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  right: 0;
+
+  background-color: white;
+}
