--- a/packages/layout/src/SidePage/index.module.scss
+++ b/packages/layout/src/SidePage/index.module.scss
@@ -19,8 +19,45 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+}
+
+.bottom-body {
+  @extend .body;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+}
+
+.top-body {
+  @extend .body;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.left-body {
+  @extend .body;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.right-body {
+  @extend .body;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.center-body {
+  @extend .body;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
