--- a/src/views/home/index.module.scss
+++ b/src/views/home/index.module.scss
@@ -1,46 +1,8 @@
 .body {
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  bottom: 0 !important;
+  background-color: #fff;
+}
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  pointer-events: none;
-
-  .main {
-    padding: 20px;
-    border-radius: 8px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    min-width: 88px;
-    height: 88px;
-
-    margin: 0 30px;
-
-    box-shadow: -5px 0px 20px 0px rgba(100, 100, 100, 0.15);
-
-    *:nth-child(2) {
-      margin-top: 16px;
-    }
-
-    img {
-      width: 30px;
-      height: 30px;
-    }
-
-    span {
-      font-size: 14px;
-      text-align: center;
-    }
-  }
+.content {
+  background-color: red;
+  position: relative;
 }
