--- a/src/views/detail/index.module.scss
+++ b/src/views/detail/index.module.scss
@@ -1,3 +1,21 @@
 .body {
   background-color: #fff;
+
+  .contain {
+    margin: 30px auto;
+    height: 300px;
+    width: 200px;
+  }
+
+  .header {
+    background-color: red;
+
+    flex: 1;
+
+    align-self: center;
+    justify-self: center;
+
+    display: flex;
+    align-items: center;
+  }
 }
