--- a/packages/navigation-vue/src/components/Loading/index.module.scss
+++ b/packages/navigation-vue/src/components/Loading/index.module.scss
@@ -10,7 +10,8 @@
   align-items: center;
   justify-content: center;
 
-  z-index: 1000;
+  z-index: 10000;
+  pointer-events: none;
 
   .main {
     padding: 20px;
@@ -28,21 +29,43 @@
 
     margin: 0 30px;
 
-    transition: all 0.2s;
     box-shadow: -5px 0px 20px 0px rgba(100, 100, 100, 0.15);
 
-    *:nth-child(2) {
-      margin-top: 16px;
-    }
-
-    img {
-      width: 30px;
-      height: 30px;
-    }
-
     span {
+      margin-top: 12px;
       font-size: 14px;
       text-align: center;
     }
+  }
+
+  .icon {
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    svg, img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .spinner {
+    animation: spin 1s linear infinite;
+    
+    circle {
+      stroke-dasharray: 180;
+      stroke-dashoffset: 60;
+    }
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
