Refactor navigation components and improve loading/toast handling
- Updated the main entry points for React and Vue demos to use 'root' instead of 'app'.
- Simplified the loading and toast components by removing unnecessary global state management.
- Introduced Popup utility for dynamic rendering of loading and toast messages.
- Deprecated LoadingContainer and ToastContainer components, as they are no longer needed.
- Enhanced loading state management with clearer status handling.
- Improved animation handling for loading and toast messages using animejs.
- Added Navigator component to encapsulate navigation logic and improve code organization.

--- a/packages/navigation-react/src/components/Toast/index.module.scss
+++ b/packages/navigation-react/src/components/Toast/index.module.scss
@@ -12,6 +12,10 @@
 }
 
 .toast {
+  position: fixed;
+  bottom: 20%;
+  left: 50%;
+
   background-color: rgba(0, 0, 0, 0.8);
   color: #fff;
 
@@ -22,4 +26,6 @@
   max-width: 60%;
   white-space: pre-line;
   text-align: center;
+  
+  z-index: 9999;
 }
